--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html>
+<% provide(:title, "Home") %>
 
-  <head>
-    <title>Home | Ruby on Rails Tutorial Sample App</title>
-  </head>
-
-  <body>
-  	<h1>Sample App</h1>
-		<p>
-			This is the home page for the
-  		<a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-  		sample application.
-		</p>
-  </body>
-  
- </html>
+<h1>Sample App</h1>
+<p>
+	This is the home page for the
+	<a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+	sample application.
+</p>
