--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,15 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
-<%= will_paginate %>
+<%= form_tag users_path, method: :get, remote: :true do %> 
+  <p>
+    <%= text_field_tag :search%>
+    <%= submit_tag "Search", class: "btn btn-primary"  %>
+  </p>
+<% end %>
 
-	<ul class="users">
-	  <%= render @users %>
-	</ul>
+<div class="paginated-users">
+	<%= render "paginated-users" %>
+</div>
 
-<%= will_paginate %>
+
